<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App basics -->
    <string name="app_name">BeerMath</string>
    <string name="website">http://www.ngorham.net</string>
    <string name="play_store">"https://play.google.com/store/apps/details?id=net.ngorham.tallycounter"</string>
    <string name="download_link">Download this app!\nhttps://play.google.com/store/apps/details?id=net.ngorham.tallycounter</string>
    <!-- Action bar -->
    <string name="swap">Swap</string>
    <string name="clear">Clear</string>
    <string name="app_rate">Rate the app!</string>
    <string name="app_share">Share the app!</string>
    <string name="app_donate">Donate</string>
    <string name="app_about">About</string>
    <string name="app_settings">Settings</string>
    <!-- About dialog -->
    <string name="app_version">App Version</string>
    <string name="app_version_number">1.0.0 8/2019</string>
    <string name="author">Author</string>
    <string name="signature">Neil Gorham</string>
    <!-- Preferences -->
    <string name="pref_title_formatting">Formatting</string>
    <string name="pref_title_num_decimals">Number of Decimals</string>
    <string name="pref_summary_num_decimals">Set the number of decimal places to be shown in the converted value</string>
    <string name="pref_title_group_separator">Group Separator</string>
    <string name="pref_summary_group_separator">Set the group separator to be shown in the converted value</string>
    <string name="pref_title_decimal_separator">Decimal Separator</string>
    <string name="pref_summary_decimal_separator">Set the decimal separator to be shown in the converted value</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_app_rate">Rate on Google Play</string>
    <string name="pref_summary_app_rate">Enjoy using BeerMath? Why not rate it 5 stars?</string>
    <string name="pref_title_app_share">Share BeerMath!</string>
    <string name="pref_summary_app_share">No one likes drinking alone. Why not share the app?</string>
    <string name="pref_title_app_donate">Donate</string>
    <string name="pref_summary_app_donate">Support development and buy me a beer :)</string>
    <string name="pref_title_app_version">App Version</string>
    <string name="pref_summary_app_version">1.0.0 8/2019</string>
    <string name="pref_title_app_author">Author</string>
    <string name="pref_summary_app_author">Neil Gorham</string>
    <!-- Number of Decimals -->
    <string-array name="num_decimals" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <!-- Group Separators -->
    <string name="group_separator_none">None</string>
    <string-array name="group_separators" translatable="false">
        <item>@string/pref_default_group_separator</item>
        <item>,</item>
        <item>" "</item>
        <item>.</item>
    </string-array>
    <!-- Decimal Separators -->
    <string-array name="decimal_separators" translatable="false">
        <item>@string/pref_default_decimal_separator</item>
        <item>,</item>
    </string-array>
    <!-- VolumeFragment -->
    <string-array name="volume_units">
        <item>Ounce</item>
        <item>Pint</item>
        <item>Gallon</item>
        <item>Barrel</item>
        <item>Milliliter</item>
        <item>Liter</item>
        <item>8oz Can</item>
        <item>11.5oz Can</item>
        <item>12oz Can/Bottle</item>
        <item>16oz Can</item>
        <item>22oz Bottle</item>
        <item>32oz Crowler</item>
        <item>64oz Growler</item>
        <item>375mL Bottle</item>
        <item>500mL Bottle</item>
        <item>750mL Bottle</item>
        <item>Mini Keg</item>
        <item>Eighth Barrel Keg</item>
        <item>Corny Keg</item>
        <item>Sixtel Keg</item>
        <item>Quarter Barrel Keg</item>
        <item>Half Barrel Keg</item>
        <item>20L Keg</item>
        <item>30L Keg</item>
        <item>50L Keg</item>
    </string-array>
    <string name="from_text">From</string>
    <string name="from_selected_text"> </string>
    <string name="to_text">To</string>
    <string name="to_selected_text"> </string>
    <string name="hint_from_value">0</string>
    <!-- Donation options -->
    <string-array name="donation_options">
        <item>Buy me a bag of beer nuts</item>
        <item>Buy me a pint of beer</item>
        <item>Buy me a pint of sour beer</item>
        <item>Buy me a case of beer</item>
    </string-array>
    <string name="toast_donation_successful">Thank you for donating!</string>
    <string name="toast_error_billing_internet">Oops, there was a problem. Please make sure you have a working Internet connection and try again.</string>
    <string name="toast_error_billing_general">Oops, there was a problem. Please try again.</string>
</resources>
