<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VolumeFragment">

    <TextView
        android:id="@+id/from_selected_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_selected_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/to_selected_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_selected_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <EditText
        android:id="@+id/from_value_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:hint="@string/hint_from_value"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintTop_toBottomOf="@id/from_selected_text"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/to_value_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:hint="@string/hint_from_value"
        android:focusable="false"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintTop_toBottomOf="@id/to_selected_text"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/from_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_text"
        app:layout_constraintTop_toBottomOf="@id/from_value_edit"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/to_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_text"
        app:layout_constraintTop_toBottomOf="@id/to_value_edit"
        app:layout_constraintEnd_toEndOf="parent" />
    <ScrollView
        android:id="@+id/scroll_radio_groups"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/from_text"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/from_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/from_radio_group"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <RadioGroup
                android:id="@+id/to_radio_group"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
